# pfp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  au_pair.cpp  check_integrity.cpp  exprop.cpp  merge.cpp  pfp++.cpp  rePFP.cpp  unparse.cpp  vcf_to_fa.cpp
.github/workflows/: cmake.yml  docker-image.yml
benchmarks/: kr_hash.cpp
cmake/: FindHTSlib.cmake
include/: au_pair_algo.hpp  internals.hpp  pfp_algo.hpp  utils.hpp  vcf.hpp  version.hpp  version.hpp.in
src/: au_pair_algo.cpp  internals.cpp  pfp_algo.cpp  utils.cpp  vcf.cpp  version.cpp.in
tests/: analysis.py  benchmark.py  extract_fa.sh  newscan_benchmark.sh  pfp++_benchmark.sh  unit_tests.cpp  vcf_generator.py
tests/benchmarks/: arabidopsis_input_list_1000.txt  arabidopsis_input_list_125.txt  arabidopsis_input_list_25.txt  arabidopsis_input_list_500.txt  arabidopsis_samples_list.txt  banchmark_au_pair.sh  benchmark_arabidopsis.py  benchmark_arabidopsis.sh  benchmark_au_pair.sh  benchmark_au_pair_arabidopsis.sh  benchmark_au_pair_human.sh  benchmark_human.py  benchmark_human.sh  benchmark_human_and_arabidopsis.sh  extract_arabidopsis.py  extract_arabidopsis_fasta.sh  extract_human.py  extract_human_fasta.sh  input_list.txt  input_list_100.txt  utils.py
tests/benchmarks/benchmarks_dcc22/: benchmark_chr19.py  benchmark_chr19.sh  benchmark_human.py  benchmark_human_pfp_from_fasta.py  benchmark_human_pfp_from_fasta.sh  extract_human.py  extract_human_fasta.sh  input_list_25.txt  input_list_2500.txt  utils.py
tests/benchmarks/samples_lists/: arabidopsis_input_list_250.txt  input_list_1600_last_250.txt  input_list_200.txt  input_list_2048.txt  input_list_all.txt
tests/benchmarks/samples_litsts/: input_list_10.txt  input_list_1600.txt  input_list_400.txt  input_list_800.txt
tests/files/: ALL.chrY.phase3_integrated_v2a.20130502.genotypes.vcf.gz.tbi  HG00096_H1_4.lft  allowed_samples_list.txt  chr.22.10.vcf.gz.tbi  samples_list.txt
tests/recursive_pfp/: Snakefile  cluster.json  run.sh
